--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: php
 sudo: required
 
 php:
-  - 7.1.3
+  - 7.2
 
 services:
   - docker
@@ -16,12 +16,8 @@ before_script:
   - travis_retry composer require --prefer-source --no-interaction --dev "orchestra/testbench:${TESTBENCH_VERSION}"
 
 script:
-  - pip install -q localstack; docker pull localstack/localstack; localstack start --docker
+  - docker pull localstack/localstack
     & sleep 20
-  - pip install -q awscli-local
-  - awslocal kinesis list-streams
-  - awslocal cognito-idp create-user-pool --pool-name p1
-  - export AWS_ACCESS_KEY_ID=foo AWS_SECRET_ACCESS_KEY=bar AWS_DEFAULT_REGION=us-east-1
-  - aws --no-verify-ssl kinesis list-streams
+  - docker run localstack/localstack
   - composer validate
   - vendor/bin/phpunit
