--- a/.travis.yml
+++ b/.travis.yml
@@ -2,18 +2,31 @@ language: php
 
 sudo: required
 
-php:
-  - 7.2
-
+matrix:
+  enclude:
+  - php: 7.0
+    env: TESTBENCH_VERSION=3.5.*
+    env: PHPUNIT_VERSION=6.0
+  - php: 7.1.3
+    env: TESTBENCH_VERSION=3.6.*
+    env: PHPUNIT_VERSION=7.0
+  - php: 7.1.3
+    env: TESTBENCH_VERSION=3.7.*
+    env: PHPUNIT_VERSION=7.5
+  - php: 7.1.3
+    env: TESTBENCH_VERSION=3.8.*
+    env: PHPUNIT_VERSION=7.5
+  - php: 7.2
+    env: TESTBENCH_VERSION=3.8.*
+    env: PHPUNIT_VERSION=8.0
+    
 services:
   - docker
-
-env:
-  - TESTBENCH_VERSION=3.8.*
 
 before_script:
   - travis_retry composer self-update
   - travis_retry composer require --prefer-source --no-interaction --dev "orchestra/testbench:${TESTBENCH_VERSION}"
+  - travis_retry composer require --prefer-source --no-interaction --dev "phpunit/phpunit:${PHPUNIT_VERSION}"
 
 script:
   - docker pull localstack/localstack
