--- a/.travis.yml
+++ b/.travis.yml
@@ -1,32 +1,25 @@
 language: php
 
 sudo: required
-
-matrix:
-  enclude:
-  - php: 7.0
-    env: TESTBENCH_VERSION=3.5.*
-    env: PHPUNIT_VERSION=6.0
-  - php: 7.1.3
-    env: TESTBENCH_VERSION=3.6.*
-    env: PHPUNIT_VERSION=7.0
-  - php: 7.1.3
-    env: TESTBENCH_VERSION=3.7.*
-    env: PHPUNIT_VERSION=7.5
-  - php: 7.1.3
-    env: TESTBENCH_VERSION=3.8.*
-    env: PHPUNIT_VERSION=7.5
-  - php: 7.2
-    env: TESTBENCH_VERSION=3.8.*
-    env: PHPUNIT_VERSION=8.0
     
 services:
   - docker
 
+matrix:
+  fast_finish: true
+  include:
+  - php: 7.1.3
+    env: TESTBENCH_VERSION=3.7.7
+  - php: 7.1.3
+    env: TESTBENCH_VERSION=3.8.3
+  - php: 7.2
+    env: TESTBENCH_VERSION=3.8.3
+  - php: 7.3
+    env: TESTBENCH_VERSION=3.8.3
+
 before_script:
-  - travis_retry composer self-update
-  - travis_retry composer require --prefer-source --no-interaction --dev "orchestra/testbench:${TESTBENCH_VERSION}"
-  - travis_retry composer require --prefer-source --no-interaction --dev "phpunit/phpunit:${PHPUNIT_VERSION}"
+  - travis_retry composer update --prefer-dist --no-interaction --prefer-stable --no-suggest
+  - travis_retry composer require --no-interaction --prefer-stable --no-suggest --update-with-dependencies --dev "orchestra/testbench:${TESTBENCH_VERSION}"
 
 script:
   - docker pull localstack/localstack
