--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -12,8 +12,11 @@ permissions:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
-
+#     runs-on: ubuntu-latest
+    matrix:
+      operating-system: [ubuntu-latest, windows-latest, macOS-latest]
+      php-versions: ['7.2', '7.3']
+      
     steps:
     - uses: actions/checkout@v3
 
