--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -12,10 +12,17 @@ permissions:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
-    matrix:
-      operating-system: [ubuntu-latest, windows-latest, macOS-latest]
-      php-versions: ['7.2', '7.3']
+#     runs-on: ubuntu-latest
+
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os:
+          - "ubuntu-latest"
+        php:
+          - "7.1"
+          - "7.2"
+          - "8.1"
       
     steps:
     - uses: actions/checkout@v3
